--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-seoul/kakao-login": "^5.4.1",
     "@react-navigation/bottom-tabs": "^7.0.4",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.3",
