--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^7.0.4",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.3",
+    "axios": "^1.7.7",
     "expo": "~52.0.7",
     "expo-file-system": "~18.0.3",
     "expo-image-picker": "~16.0.2",
