--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.3",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "expo": "~52.0.7",
     "expo-file-system": "~18.0.3",
     "expo-image-picker": "~16.0.2",
     "expo-status-bar": "~2.0.0",
+    "prop-types": "^15.8.1",
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-config": "^1.5.3",
