--- a/app.json
+++ b/app.json
@@ -11,7 +11,8 @@
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.zipcock.app"
     },
     "android": {
       "adaptiveIcon": {
