--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-config": "^1.5.3",
+    "react-native-kakao-logins": "^1.4.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
