--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-svg": "15.8.0",
     "react-native-config": "^1.5.3",
     "react-native-kakao-logins": "^1.4.0",
-    "react-native-webview": "^13.12.4"
+    "react-native-webview": "^13.12.4",
+    "expo-font": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
